# xoak

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  design_notes.md  pyproject.toml  setup.py
.github/: codecov.yml
.github/workflows/: pypipublish.yaml  test.yaml
ci/: environment.yml
doc/: api.rst  conf.py  environment.yml  release_notes.rst
doc/_static/: style.css
doc/examples/: custom_indexes.ipynb  dask_support.ipynb  index.rst  introduction.ipynb
src/xoak/: __init__.py  accessor.py  tree_adapters.py
src/xoak/index/: __init__.py  base.py  s2_adapters.py  scipy_adapters.py  sklearn_adapters.py
src/xoak/tests/: conftest.py  test_accessor.py  test_index_base.py  test_s2_adapters.py  test_scipy_adapters.py  test_sklearn_adapters.py
