[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"

[tool.hatch.metadata.hooks.vcs]

[tool.hatch.build.targets.sdist]
only-include = ["src/xoak"]

[project]
name = "xoak"
dynamic = ["version"]
authors = [
  { name = "Benoît Bovy" },
  { name = "Willi Rath" },
]
maintainers = [
  { name = "xoak contributors" },
]
license = { text = "MIT" }
description = "Xarray extension that provides indexes for selecting irregular, n-dimensional data."
keywords = ["xarray", "index"]
readme = "README.md"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
  "xarray>=2025.07.1",
  "numpy",
  "scipy",
  "dask",
]

[project.optional-dependencies]
extras = [
  "scikit-learn",
  "pys2index",
]
test = [
  "pytest",
]

[project.urls]
Documentation = "https://xoak.readthedocs.io"
Repository = "https://github.com/xarray-contrib/xoak"

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
  "doc/examples",
]
line-length = 100

[tool.ruff.lint]
ignore = [
  "E402",   # E402: module level import not at top of file
]
select = [
  "F",      # Pyflakes
  "E",      # Pycodestyle
  "I",      # isort
  "UP",     # Pyupgrade
  "TID",    # flake8-tidy-imports
  "W",
]
extend-safe-fixes = [
  "TID252", # absolute imports
]
fixable = ["I", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["xoak"]
known-third-party = [
  "xarray",
  "scipy",
  "sklearn",
  "pys2index",
]

[tool.mypy]
files = ["xoak"]
show_error_codes = true
warn_unused_ignores = false
